--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,17 @@ img {
   width: 300px;
   height: 300px;
 }
+#prev {
+  margin: 10px;
+}
 
+#next {
+  margin: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
